--- a/index.html
+++ b/index.html
@@ -8,18 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>        
-    <h1>HTML5カメラ</h1>
-
-    <video id="camera" width="300" height="200"></video>
-    <canvas id="picture" width="300" height="200"></canvas>
-    <form>
-    <button type="button" id="shutter">シャッター</button>
-    </form>
-
-    <audio id="se" preload="auto">
-    <source src="camera-shutter1.mp3" type="audio/mp3">
-    </audio>
-
+    <label for="upload">写真を撮影してアップロードする</label>
+    <input id="upload" type="file" name="image" accept="image/*" capture="camera">
+    
     <script src="script.js"></script>
 
 </body>
