--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>image-editor</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>        
-    <label for="upload">写真を撮影してアップロードする</label>
+    <label for="upload" id="up">写真を撮影してアップロードする</label>
     <input id="upload" type="file" name="image" accept="image/*" capture="camera" onchange="previewImage(this);">
 
     <p>
     <img id="preview" style="width: 100%;height: auto;display: block;">
     </p>
+    
+    <label for="exampleColorInput" class="form-label">色を選択する</label>
+    <input type="color" class="form-control form-control-color" id="exampleColorInput" value="#563d7c" title="Choose your color">
+
+
+    <label for="customRange2" class="form-label">Example range</label>
+    <input type="range" class="form-range" id="range" value="10">
+    <span id="value">10</span>
 
     <script src="script.js"></script>
 
