--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <input type="range" class="form-range" id="range" value="10">
     <span id="value">10</span>
 
-    <canvas id="result" width="3264" height="2448" style="width: 100%;height: auto;display: block;"></canvas>
+    <canvas id="result" style="width: 100%;height: auto;display: block;"></canvas>
 
     <script src="script.js"></script>
 
