--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <input type="color" class="form-control form-control-color" id="exampleColorInput" value="#563d7c" title="Choose your color">
 
 
-    <label for="customRange2" class="form-label">Example range</label>
+    <label for="customRange2" class="form-label">削除範囲</label>
     <input type="range" class="form-range" id="range" value="10">
     <span id="value">10</span>
 
